src/objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Milestones (Marketing activity)</relationshipLabel>
        <relationshipName>Milestones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_type__c</fullName>
        <label>Milestone type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reach on time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Achieved__c</fullName>
        <label>Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_CRM_settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target CRM settings</label>
        <referenceTo>CRM_settings__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_ERP_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target ERP Sales</label>
        <referenceTo>ERP_Settings__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Taget marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Milestones (Target Project)</relationshipLabel>
        <relationshipName>Milestones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Socialmedia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Socialmedia</label>
        <referenceTo>socialmedia_settings__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_number__c</fullName>
        <label>Target_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_number_outcome__c</fullName>
        <description>This feild will be update by trigger in ERP, CRM and Social media</description>
        <label>Target number outcome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targetdate__c</fullName>
        <label>Target date</label>
        <type>Date</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Milestone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>